# atom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  TODO  vcpkg.json
cmake/modules/: exec.cmake  translate.cmake
docs/proton/: intro.md
proton/: CMakeLists.txt
proton/benchmark/src/: world_base.cpp
proton/docs/: quick_start.md
proton/docs/en/: quick_start.md
proton/docs/zh/: 快速开始.md
proton/example/include/: example_application.hpp
proton/example/src/: example_application.cpp
proton/include/proton/: archetype.hpp  command_buffer.hpp  desc_list.hpp  execution.hpp  executor.hpp  observer.hpp  proton.hpp  registry.hpp  run.hpp  stage.hpp  system.hpp  world.hpp  world_accessor.hpp  world_base.hpp  world_desc.hpp  world_traits.hpp
proton/include/proton/args/: call_from_world.hpp  make_from_world.hpp  match.hpp  qualifier.hpp
proton/include/proton/args/common/: command_buffer.hpp  commands.hpp  cond.hpp  query.hpp  single.hpp
proton/include/proton/args/observer/: on.hpp
proton/include/proton/args/system/: local.hpp  res.hpp
proton/test/include/: example_application.hpp
proton/test/src/: archetype.cpp  command_buffer.cpp  commands.cpp  example_application.cpp  query.cpp  world_base.cpp
